Add missing styling

--- a/index.html
+++ b/index.html
@@ -24,56 +24,56 @@
                     <td id="lesson-number-container">
                         <div id="firstLesson">
                             <div id="lesson-number">1</div>
-                            <div>7:30 - 8:15</div>
+                            <div id="lesson-time">7:30 - 8:15</div>
                         </div>
                     </td>
 
                     <td id="lesson-number-container">
                         <div id="secondLesson">
                             <div id="lesson-number">2</div>
-                            <div>8:20 - 9:05</div>
+                            <div id="lesson-time">8:20 - 9:05</div>
                         </div>
                     </td>
 
                     <td id="lesson-number-container">
                         <div id="thirdLesson">
                             <div id="lesson-number">3</div>
-                            <div>9:10 - 9:55</div>
+                            <div id="lesson-time">9:10 - 9:55</div>
                         </div>
                     </td>
 
                     <td id="lesson-number-container">
                         <div id="fourthLesson">
                             <div id="lesson-number">4</div>
-                            <div>10:05 - 10:50</div>
+                            <div id="lesson-time">10:05 - 10:50</div>
                         </div>
                     </td>
 
                     <td id="lesson-number-container">
                         <div id="fifthLesson">
                             <div id="lesson-number">5</div>
-                            <div>10:55 - 11:40</div>
+                            <div id="lesson-time">10:55 - 11:40</div>
                         </div>
                     </td>
 
                     <td id="lesson-number-container">
                         <div id="sixthLesson">
                             <div id="lesson-number">6</div>
-                            <div>11:45 - 12:30</div>
+                            <div id="lesson-time">11:45 - 12:30</div>
                         </div>
                     </td>
 
                     <td id="lesson-number-container">
                         <div id="seventhLesson">
                             <div id="lesson-number">7</div>
-                            <div>12:35 - 13:20</div>
+                            <div id="lesson-time">12:35 - 13:20</div>
                         </div>
                     </td>
 
                     <td id="lesson-number-container">
                         <div id="eighthLesson">
                             <div id="lesson-number">8</div>
-                            <div>13:40 - 14:25</div>
+                            <div id="lesson-time">13:40 - 14:25</div>
                         </div>
                     </td>
 
