--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
 	<script type="text/javascript" src="/DGS-1100-08_1.00.016/form.js"></script>
 	<link rel="stylesheet" type="text/css" href="/DGS-1100-08_1.00.016/main.css">
 	<script type="text/javascript" src="/DGS-1100-08_1.00.016/login.js"></script>
-	<style>
-		<!--.tabLogTit{position:absolute;width:334;height:270;background:rgb(228,234,235);border:solid;border-width:1;border-color:rgb(19,99,147);}.imgLogTit{position:absolute;top:-1;left:0;z-index:0;width:334;height:30;border:none;}.imgLogTitKey{position:absolute;top:29;left:0;z-index:0;width:334;height:50;border:none;}.tabLogCont{position:absolute;width:280;border:none;}.tdTitle{position:absolute;z-index:1;font-size:18px;height:30;color:black;}
-		-->
+	<style>		
 	</style>
 	<script>
 		docW("<title>" + g_SwitchInfo[0] + "</title>");
@@ -90,7 +88,9 @@
 	</script>
 	<title>DGS-1100-08</title>
 </head>
-<frameset border="0" framespacing="0" frameborder="no" rows="120,*"><frame name="topPic" src="/DGS-1100-08_1.00.016/top.htm" scrolling="no"><frameset border="0" framespacing="0" frameborder="no" cols="266,*"><frame name="leftMenu" src="/DGS-1100-08_1.00.016/tree/jstree.htm" noresize="" scrolling="no"><frame name="mf0" id="mf0" src="/DGS-1100-08_1.00.016/iss/H_00_DeviceInfo.htm" noresize="" scrolling="auto">
+<frameset border="0" framespacing="0" frameborder="no" rows="120,*"><frame name="topPic" src="/DGS-1100-08_1.00.016/top.htm" scrolling="no">
+<frameset border="0" framespacing="0" frameborder="no" cols="266,*"><frame name="leftMenu" src="/DGS-1100-08_1.00.016/tree/jstree.htm" noresize="" scrolling="no">
+	<frame name="mf0" id="mf0" src="/DGS-1100-08_1.00.016/iss/H_00_DeviceInfo.htm" noresize="" scrolling="auto">
 </frameset>
 </frameset>
 </html>
