Fix Port Settings sub-website

--- a/DGS-1100-08_1.00.016/iss/H_13_Port_Setting.htm
+++ b/DGS-1100-08_1.00.016/iss/H_13_Port_Setting.htm
@@ -105,7 +105,7 @@ EnableObj('btRefresh');
 <script>
 var PtSpd=PortSpeed.slice(0,-1);
 dps=d.portset;
-plength=ds_PortSetting.length;
+plength=8;
 genHdWksp(Port0100,336);
 showFieldset("diFS",Port0100,40,282);
 showTable('tabContent','tabContent');
