Add missing favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<script>RT = '/DGS-1100-08_1.00.016/';</script>
-
+	<link rel="icon" type="image/png" href="/DGS-1100-08_1.00.016/Icon/zselogo.png"/>
 	<script>
 		if (typeof (RT) == 'undefined') {
 			RT = location.href;
